syntax = "proto3";

package validation;

option go_package = "github.com/bloxapp/ssv/ibft/val/validation";

import "eth/v1alpha1/attestation.proto";
import "eth/v1alpha1/beacon_block.proto";

message InputValue {
  oneof data {
    ethereum.eth.v1alpha1.AttestationData attestation_data = 1;
    ethereum.eth.v1alpha1.AggregateAttestationAndProof aggregation_data = 2;
    ethereum.eth.v1alpha1.BeaconBlock beacon_block = 3;
  }

  oneof signed_data {
    ethereum.eth.v1alpha1.Attestation attestation = 4;
    ethereum.eth.v1alpha1.SignedAggregateAttestationAndProof aggregation = 5;
    ethereum.eth.v1alpha1.SignedBeaconBlock block = 6;
  }
}
